      migrate oldstyle Actions (ActionInformation objects) you can create a
      snapshot and re-import Actions using the portal_setup tool.

    - TypesTool: TypeInformation classes are now pluggable.
      Any class that implements the TypeInformation interface and is
      a registered meta type can now be used in the TypesTool.

  Bug Fixes

    - Added testing framework to suppress / examine output from warnings
      module and from zLOG.

    - CMFUid/UniqueIdGeneratorTool.py: Replaced the old BTree.Length.Length
      implementation by a simple counter. Using a BTree.Length.Length object
      as counter may have caused setting the same unique id to multiple 
      objects under high load. The tools counter gets automigrated on the 
      first access. This is a forward port from CMF-1_5-branch before the 
      CMF 1.5.2 release.

    - CMFCore.utils.ToolInit: For icon registration to work with ToolInit
      you would have to have the same product_name parameter as the actual
      product name of the product. Now we just pick up that product name from
      the product context instead, and ignore the product_name parameter (with
      a deprecation warning).

    - CMFSetup: Merged the registerClass and registerIcon call since 
      registerClass is capable of registering icons.
    
    - DublinCore and PortalFolder: Changed fallback in 'Type' method.
      The fallback is only necessary if the related type info is missing.

    - CMFCore.PortalContent: Wrong variable name in __call__ would blow up
      if no default view could be found for a piece of content.

  Others

    - The CMF now depends on Zope 2.8 / Five.

    - Non-release packages moved out of the /CMF/ repository package:
    
      o hotfixes moved to /CMF_Hotfixes
      
      o others (CMFCollector, CMFStaging, CMFTracker, CMFWorkspaces)
        moved to /CMF_Extras/

    - To document how to create a CMF release from CMF a description is now